zero-trust-gitops-platform/policies/tests/allowed-registries/resource-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noncompliant-pod
  namespace: demo-api
  labels:
    app.kubernetes.io/name: demo-api
    app.kubernetes.io/managed-by: argocd
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: docker.io/library/demo-api@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
      securityContext:
        readOnlyRootFilesystem: true
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 100m
          memory: 64Mi
        limits:
          cpu: 200m
          memory: 128Mi
      readinessProbe:
        httpGet:
          path: /readyz
          port: 8080
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
