zero-trust-gitops-platform/policies/tests/allowed-registries/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: allowed-registries-test
policies:
  - ../../supply-chain/allowed-registries.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: allowed-registries
    rule: validate-registry
    resources:
      - compliant-pod
    kind: Pod
    result: pass
  - policy: allowed-registries
    rule: validate-registry
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
